--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "3"
 members = [
     "day01_hello_rust",
-    "day02_variables_types",
+    "day02_variables_types", 
+    "day03_control_flow",
     # 你可以继续添加其他子目录
 ]
