--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ resolver = "3"
 members = [
     "day01_hello_rust",
     "day02_variables_types", 
-    "day03_control_flow", "day04_ownership",
+    "day03_control_flow", 
+    "day04_ownership", 
+    "day05_structs",
     # 你可以继续添加其他子目录
 ]
